--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="difficultyButton" data-size="10x10x15">Beginner</div>
                 </div>
             <div class="gridwrapper">
-                <div class="grid grid-easy"></div>
+                <div class="base Beginner"></div>
             </div>
             </div>
                 <script src=https://code.jquery.com/jquery-3.5.1.min.js></script>
