--- a/index.html
+++ b/index.html
@@ -4,25 +4,26 @@
         <link href="style.css" rel="stylesheet" type="text/css" />
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>Sweeping Mines With Matt</title>
+        <title>Warzone Mine Sweeper</title>
     </head>
     <body>
         <div>
             <div class="row">
                 <div class = "column left">
                     <div class="flagCounter"></div>
-                    <div class="gameTimer">Timer: 00:00.00</div>
+                    <div class="stopwatch">Time in Game: 00:00.00</div>
+                    <div class="countdown">Time Till Detonation: 00:00.00</div>
                 </div>
             <div class = "middle">
                 <div class="difficultyMenu">
-                    <div class="difficultyButton" data-size="20x20x80">Advanced</div>
-                    <div class="difficultyButton" data-size="10x10x15">Beginner</div>
+                    <div class="difficulty_select" data-size="10x10x15x15">Beginner</div>
+                    <div class="difficulty_select" data-size="20x20x80x80">Advanced</div>
                 </div>
-            <div class="gridwrapper">
+            <div class="playing_area">
                 <div class="base Beginner"></div>
             </div>
             </div>
-                <script src=https://code.jquery.com/jquery-3.5.1.min.js></script>
+                <script src="jquery.js" langauge="JQuery"></script>
                 <script src="main.js" language="JavaScript"></script>
             </div>
         </div>
