--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
         <div>
             <div class="row">
                 <div class = "column left">
-                    <div class="flagCounter"></div>
+                    <div class="flags_placed"></div>
                     <div class="stopwatch">Time in Game: 00:00.00</div>
                     <div class="countdown">Time Till Detonation: 00:00.00</div>
                 </div>
             <div class = "middle">
                 <div class="difficultyMenu">
                     <div class="difficulty_select" data-size="10x10x15x15">Beginner</div>
-                    <div class="difficulty_select" data-size="20x20x80x80">Advanced</div>
+                    <div class="difficulty_select" data-size="15x15x25x25">Intermediate</div>
+                    <div class="difficulty_select" data-size="20x20x80x80">Expert</div>
                 </div>
             <div class="playing_area">
                 <div class="base Beginner"></div>
