--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
         <div>
             <div class="row">
                 <div class = "column left">
+                    <div class="flags_remaining"></div>
                     <div class="flags_placed"></div>
                     <div class="stopwatch">Time in Game: 00:00.00</div>
                     <div class="countdown">Time Till Detonation: 00:00.00</div>
                 </div>
-            <div class = "middle">
+                <div class="column right">
+                    
+                </div>
+            <div class = "column middle">
                 <div class="difficultyMenu">
                     <div class="difficulty_select" data-size="10x10x15x15">Beginner</div>
                     <div class="difficulty_select" data-size="15x15x25x25">Intermediate</div>
@@ -23,6 +27,19 @@
             <div class="playing_area">
                 <div class="base Beginner"></div>
             </div>
+            <div class="rules">
+                <ul>
+                    <li>Soldier! Clear all the buildings without triggering bombs</li>
+                    <li>1) Left click to clear a building.</li>
+                    <li>2) Right click to flag a building.</li>
+                    <li>3) The numbers in adjacent buildings show the number of bobs surroundng you.</li>
+                    <li>Your job is to clear all the buildings without triggering any bombs before the time runs out.</li>
+                    <li>Good Luck! Click a square to start.</li>
+                </ul>
+            </div>
+            </div>
+            <div class="right">
+
             </div>
                 <script src="jquery.js" langauge="JQuery"></script>
                 <script src="main.js" language="JavaScript"></script>
