--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="style.css" rel="stylesheet" type="text/css" />
+        <link href="stylesheet.css" rel="stylesheet" type="text/css" />
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Warzone Mine Sweeper</title>
