created overlay, changed styling

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
                     <div class="flags_placed"></div>
                     <div class="stopwatch">Time in Game: 00:00.00</div>
                     <div class="countdown">Time Till Detonation: 00:00.00</div>
+                    <div class="rules">
+                        <ul>
+                            <li>Soldier! Clear all the buildings without triggering bombs</li>
+                            <li>1) Left click to clear a building.</li>
+                            <li>2) Right click to flag a building.</li>
+                            <li>3) The numbers in adjacent buildings show the number of bombs surroundng you.</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="column right">
                     
@@ -24,19 +32,11 @@
                     <div class="difficulty_select" data-size="15x15x25x25">Intermediate</div>
                     <div class="difficulty_select" data-size="20x20x80x80">Expert</div>
                 </div>
+                <div id="overlay"></div>
             <div class="playing_area">
                 <div class="base Beginner"></div>
             </div>
-            <div class="rules">
-                <ul>
-                    <li>Soldier! Clear all the buildings without triggering bombs</li>
-                    <li>1) Left click to clear a building.</li>
-                    <li>2) Right click to flag a building.</li>
-                    <li>3) The numbers in adjacent buildings show the number of bobs surroundng you.</li>
-                    <li>Your job is to clear all the buildings without triggering any bombs before the time runs out.</li>
-                    <li>Good Luck! Click a square to start.</li>
-                </ul>
-            </div>
+            
             </div>
             <div class="right">
 
