--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </div>
                 <script src="jquery.js" langauge="JQuery"></script>
                 <script src="main.js" language="JavaScript"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js" integrity="sha512-qRj8N7fxOHxPkKjnQ9EJgLJ8Ng1OK7seBn1uk8wkqaXpa7OA13LO6txQ7+ajZonyc9Ts4K/ugXljevkFTUGBcw==" crossorigin="anonymous"></script>
             </div>
         </div>
     </body>
