--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
                 <div class = "column left">
                     <div class="flags_remaining"></div>
                     <div class="flags_placed"></div>
-                    <div class="stopwatch">Time in Game: 00:00.00</div>
-                    <div class="countdown">Time Till Detonation: 00:00.00</div>
-                    <div id="overlay"></div>
+                    <div class="stopwatch">Time in Game: 0</div>
+                    <div class="countdown">Denonation In: 0</div>
+                    
                 </div>
+                <div id="overlay"></div>
             <div class = "column middle">
                 <div class="difficultyMenu">
                     <div class="difficulty_select" data-size="10x10x15x15">Beginner</div>
